--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@emotion/styled": "^11.14.0",
     "@mui/icons-material": "^6.4.3",
     "@mui/material": "^6.4.2",
+    "@mui/x-data-grid": "^7.26.0",
     "@toolpad/core": "^0.12.0",
     "next": "15.1.6",
     "react": "^19.0.0",
