--- a/package.json
+++ b/package.json
@@ -15,11 +15,13 @@
     "@mui/material": "^6.4.2",
     "@mui/x-data-grid": "^7.26.0",
     "@toolpad/core": "^0.12.0",
+    "formik": "^2.4.6",
     "next": "15.1.6",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
     "react-icons": "^5.4.0",
-    "react-router-dom": "^7.1.5"
+    "react-router-dom": "^7.1.5",
+    "yup": "^1.6.1"
   },
   "devDependencies": {
     "@eslint/eslintrc": "^3",
