--- a/package.json
+++ b/package.json
@@ -19,10 +19,11 @@
     "@toolpad/core": "^0.12.0",
     "date-fns": "^4.1.0",
     "formik": "^2.4.6",
-    "next": "15.1.6",
+    "next": "^15.3.1",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
     "react-icons": "^5.4.0",
+    "react-number-format": "^5.4.4",
     "react-router-dom": "^7.1.5",
     "yup": "^1.6.1"
   },
