--- a/package.json
+++ b/package.json
@@ -13,12 +13,16 @@
     "@emotion/styled": "^11.14.0",
     "@mui/icons-material": "^6.4.3",
     "@mui/joy": "^5.0.0-beta.52",
-    "@mui/material": "^6.4.2",
+    "@mui/material": "^6.4.11",
     "@mui/utils": "^7.0.2",
     "@mui/x-data-grid": "^7.26.0",
+    "@mui/x-date-pickers": "^8.3.1",
     "@toolpad/core": "^0.12.0",
+    "axios": "^1.9.0",
     "date-fns": "^4.1.0",
+    "dayjs": "^1.11.13",
     "formik": "^2.4.6",
+    "lucide-react": "^0.510.0",
     "next": "^15.3.1",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
