--- a/.env.development
+++ b/.env.development
@@ -1,2 +1,2 @@
-NEXT_PUBLIC_BASE_URL=http://desarrollo.tunombre.com
-NEXT_PUBLIC_PORT=4000
+NEXT_PUBLIC_BASE_URL=http://216.246.113.71
+NEXT_PUBLIC_PORT=8080
